playground: fix vertical alignment of "Imports" checkbox
When examples were added to the playground, the
banner was changed to use flexbox. However, the
"Imports" checkbox lost its vertical centering
as a result. See https://i.imgur.com/KDYGGaR.png.

This change fixes the vertical alignment to look
like the following: https://i.imgur.com/HJQSJ1w.png.

Fixes golang/go#45641.

Reviewed-on: https://go-review.googlesource.com/c/playground/+/294889
Trust: Dmitri Shuralyov <dmitshur@golang.org>
Run-TryBot: Alexander Rakoczy <alex@golang.org>
TryBot-Result: Go Bot <gobot@golang.org>

--- a/static/style.css
+++ b/static/style.css
@@ -125,12 +125,15 @@ input[type=button],
 	padding: 0.25em 7px;
 }
 #importsBox input {
-	position: relative;
-	top: -2px;
-	left: 1px;
-	height: 10px;
-	width: 10px;
-	margin-left: 0;
+	flex: none;
+	height: 11px;
+	width: 11px;
+	margin: 0 5px 0 0;
+}
+#importsBox label {
+	display: flex;
+	align-items: center;
+	line-height: 1.2;
 }
 #shareURL {
 	width: 280px;
